merge changes into single commit
- Update Gradle wrapper from 6.8.3 to 8.14.3
- Modernize build.gradle with current syntax and plugin management
- Fix deprecated configurations and API usage:
  - Replace archiveName with archiveFileName
  - Replace destinationDir with destinationDirectory
  - Replace compile configuration with compileClasspath
  - Replace providedCompile with compileOnly
  - Update Maven repository URL assignments
  - Remove deprecated maven plugin and uploadArchives task
- Update plugin versions:
  - Gradle Versions Plugin: 0.28.0 → 0.51.0
  - OWASP Dependency Check: 6.5.0.1 → 10.0.4
  - Gretty plugin: 3.0.7 → 4.1.4
- Update Lombok to 1.18.38 for better Java compatibility
- Add gradle.properties with modern performance settings
- Update Tomcat container to tomcat10 for servlet compatibility
- Create PDF-AS modernization spec and task structure

Resolves compatibility issues with Gradle 8.x and prepares
foundation for further dependency modernization.