@@ -26,13 +26,14 @@ package at.gv.egiz.pdfas.web.servlets;
 import java.io.IOException;
 import java.net.URL;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 
-import javax.servlet.ServletException;
-import javax.servlet.http.HttpServlet;
-import javax.servlet.http.HttpServletRequest;
-import javax.servlet.http.HttpServletResponse;
+import jakarta.servlet.ServletException;
+import jakarta.servlet.http.HttpServlet;
+import jakarta.servlet.http.HttpServletRequest;
+import jakarta.servlet.http.HttpServletResponse;
 
-import org.apache.commons.lang3.StringEscapeUtils;
+import org.apache.commons.text.StringEscapeUtils;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
@@ -141,13 +142,13 @@ public class ErrorPage extends HttpServlet {
 
 				if (e != null && WebConfiguration.isShowErrorDetails()) {
 					template = template.replace("##CAUSE##",
-							URLEncoder.encode(e.getMessage(), "UTF-8"));
+							URLEncoder.encode(e.getMessage(), StandardCharsets.UTF_8));
 				} else {
 					template = template.replace("##CAUSE##", "");
 				}
 				if (message != null) {
 					template = template.replace("##ERROR##",
-							URLEncoder.encode(message, "UTF-8"));
+							URLEncoder.encode(message, StandardCharsets.UTF_8));
 				} else {
 					template = template.replace("##ERROR##",
 							"Unbekannter Fehler");
